--- a/src/app/archivo/archivo.component.html
+++ b/src/app/archivo/archivo.component.html
@@ -1,36 +1,51 @@
 <body>
-<nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
- <div class="container-fluid">
-    <a class="navbar-brand" >Home</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        
-       
-        
-       
-      </ul>
-      <form class="d-flex">
-      <h5 id="user" *ngIf="nombre" >{{(nombre + ' '  +apellido) | uppercase}}</h5>
-      <button mat-mini-fab color="primary" [matMenuTriggerFor]="menu">
-          <mat-icon>person</mat-icon>
-        </button>
-       
-            <mat-menu #menu="matMenu">
-                <button mat-menu-item>Editar Perfil</button>
-                <button (click)="logout()"mat-menu-item><mat-icon>power_settings_new</mat-icon>Salir        </button>
-            </mat-menu>
-      </form>
-    </div>
-  </div>
-</nav>
+
     <div class="card text-white bg-secondary mb-3" >
-        <div class="card-header">Archivos <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Crear Archivo</button></div>
+        <div class="card-header">Archivos <button type="button" style="height : 38px" class="btn btn-success" data-toggle="modal" data-target="#exampleModal"><mat-icon matSuffix>add_circle</mat-icon></button></div>
         <div class="card-body">
           
+     <div class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource">
 
+    <!-- Position Column -->
+    <ng-container matColumnDef="nro">
+      <th mat-header-cell *matHeaderCellDef> No. </th>
+      <td mat-cell *matCellDef="let element;let i=index"> {{i+1}} </td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="nombre">
+      <th mat-header-cell *matHeaderCellDef> Nombre </th>
+      <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+    </ng-container>
+
+  <!-- Symbol Column -->
+    <ng-container matColumnDef="tipo">
+      <th mat-header-cell *matHeaderCellDef> Tipo </th>
+      <td mat-cell *matCellDef="let element"> {{element.tipo}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="url">
+      <th mat-header-cell *matHeaderCellDef> Url </th>
+      <td mat-cell *matCellDef="let element"> <button mat-mini-fab color="primary" (click)="openDialog(element.nombre,element.tipo)">
+          <mat-icon matSuffix>visibility</mat-icon>
+        </button> </td>
+    </ng-container>
+
+<ng-container matColumnDef="eliminar">
+      <th mat-header-cell *matHeaderCellDef> Eliminar </th>
+      <td mat-cell *matCellDef="let element"> <button style="border:none"  mat-mini-fab color="warn" (click)="eliminar(element.idarchivo,element.nombre)">
+          <mat-icon matSuffix>delete</mat-icon>
+        </button> </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+</div>
        
           
           
@@ -44,9 +59,9 @@
 
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
+<div class="modal fade bd-example-modal-lg" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-md modal-dialog-centered" role="document">
+    <div class="modal-content" >
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Subir Archivo</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -54,12 +69,35 @@
         </button>
       </div>
       <div class="modal-body">
-        ...
+       <form class="row g-6" [formGroup]="form">
+         <mat-grid-list cols="1" rowHeight="70px">
+          <mat-grid-tile [colspan]="1" [rowspan]=1> 
+            
+            <input type="file" formControlName="foto"  (change)="mostrar($event)"  style="width:90%" class="form-control">
+          </mat-grid-tile>
+         
+           <mat-grid-tile [colspan]="1" [rowspan]=1> 
+            <mat-form-field class="example-full-width" style="width:90%" appearance="fill">
+                    <mat-label>Tipo</mat-label>
+                    <input matInput formControlName="tipo"   [disabled]="true">
+                  </mat-form-field>
+          </mat-grid-tile>
+            <mat-grid-tile [colspan]="1" [rowspan]=1> 
+            <mat-form-field class="example-full-width"  style="width:88%" appearance="fill">
+                  <mat-label>Nombre</mat-label>
+                  <input matInput formControlName="nombre" >
+                </mat-form-field>
+          </mat-grid-tile>
+           
+            
+         </mat-grid-list>
+         </form> 
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" (click)="cerrar()" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+        <button type="button" (click)="enviar()"  [disabled]="form.invalid" class="btn btn-success" data-dismiss="modal">Subir</button>
       </div>
     </div>
   </div>
 </div>
+
