--- a/src/app/archivo/archivo.component.html
+++ b/src/app/archivo/archivo.component.html
@@ -28,14 +28,14 @@
     <!-- Symbol Column -->
     <ng-container matColumnDef="url">
       <th mat-header-cell *matHeaderCellDef> Url </th>
-      <td mat-cell *matCellDef="let element"> <button mat-mini-fab color="primary" (click)="openDialog(element.nombre,element.tipo)">
+      <td mat-cell *matCellDef="let element"> <button style="border:none;color : #0f5cb0" (click)="openDialog(element.nombre,element.tipo)">
           <mat-icon matSuffix>visibility</mat-icon>
         </button> </td>
     </ng-container>
 
 <ng-container matColumnDef="eliminar">
       <th mat-header-cell *matHeaderCellDef> Eliminar </th>
-      <td mat-cell *matCellDef="let element"> <button style="border:none"  mat-mini-fab color="warn" (click)="eliminar(element.idarchivo,element.nombre)">
+      <td mat-cell *matCellDef="let element"> <button style="border:none;color:red"   (click)="eliminar(element.idarchivo,element.nombre)">
           <mat-icon matSuffix>delete</mat-icon>
         </button> </td>
     </ng-container>
