--- a/src/app/mensaje/mensaje/mensaje.component.html
+++ b/src/app/mensaje/mensaje/mensaje.component.html
@@ -33,7 +33,7 @@
     <!-- Symbol Column -->
     <ng-container matColumnDef="detalle">
       <th mat-header-cell *matHeaderCellDef> Detalle </th>
-      <td mat-cell *matCellDef="let element" > <button mat-mini-fab color="primary" (click)="mostrar(element)" data-toggle="modal" data-target="#detalle">
+      <td mat-cell *matCellDef="let element" > <button style="border:none;color : #0f5cb0"  (click)="mostrar(element)" data-toggle="modal" data-target="#detalle">
           <mat-icon matSuffix>visibility</mat-icon>
         </button> </td>
     </ng-container>
