--- a/src/app/navbar/nav/nav.component.html
+++ b/src/app/navbar/nav/nav.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg bg " style="color:white;background-color:#05678e">
  <div class="container-fluid">
-    <a class="navbar-brand" >Home</a>
+    <a class="navbar-brand"  style="color:white;"><img id="img" src="https://s3.amazonaws.com/files.patmos.upeu.edu.pe/statics/app-assets/images/logo-upeu-blanco.png"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,7 +13,7 @@
       </ul>
       <form class="d-flex">
       <h5 id="user" *ngIf="nombre" >{{(nombre + ' '  +apellido) | uppercase}}</h5>
-      <button mat-mini-fab color="primary" [matMenuTriggerFor]="menu">
+      <button mat-mini-fab color="green" [matMenuTriggerFor]="menu">
           <mat-icon>person</mat-icon>
         </button>
        
