--- a/src/app/Usuarios/login/login.component.html
+++ b/src/app/Usuarios/login/login.component.html
@@ -1,48 +1,227 @@
-
-
-	<div class="limiter">
-		<div class="container-login100" style="background-image: url('../assets/bg-01.jpg');">
-			<div class="wrap-login100 ">	
-            <form class="login100-form validate-form p-b-33 p-t-5">
-            <mat-grid-list cols="1" rowHeight="70px">
-                <mat-grid-tile  >
-                <span class="login100-form-title ">
-					Login
-				</span>
-                </mat-grid-tile>
-                 <mat-grid-tile [colspan]="1" [rowspan]=1> 
-                  <mat-form-field style="width:90%" class="example-full" appearance="fill">
-                    <mat-label>Usuario</mat-label>
-                     <input name="username" [(ngModel)]="usuario.username" id="username"    matInput placeholder="" >
-                     </mat-form-field>
-                
-                 </mat-grid-tile>
-                 <mat-grid-tile [colspan]="1" [rowspan]=1> 
-                  <mat-form-field style="width:90%" class="example-full" appearance="fill">
-                    <mat-label>Password</mat-label>
-                     <input type="password" name="username"  [(ngModel)]="usuario.password"  matInput placeholder="" >
-                     </mat-form-field>
-                
-                 </mat-grid-tile>
-                
-                
-            
-                 <mat-grid-tile>
-                   <div class="form-group col-sm-6">
-            <button (click)="login()"> Iniciar Sesion</button>
-   
+<div class="padre">
+    <div class="hijouno">
+        <div class="cabezera">
+            <div id="iconogeneral"></div>
+            <h1 class="logo">Oido Amigo</h1>
+        </div>
+        <div class="cuerpocard">
+            <div class="card" style="width: 100%,height:100%">
+                <img class="card-img-top" src="https://blog.saludsa.com/hubfs/Imagenes%20Blog/shutterstock_573804736%20%281%29.jpg" alt="Card image cap" />
+                <div class="card-body">
+                    <p class="card-text">Tenemos como objetivo brindar primeros auxilios psicológicos, a personas con dificultades emocionales, causadas por el aislamiento social en el contexto de la pandemia.</p>
+                </div>
             </div>
-                 </mat-grid-tile>
-             </mat-grid-list>
-				
-			
+        </div>
+    </div>
+    <div class="hijodos">
+        <div class="cuerpouno" id="cuerpouno">
+            <div class="cardregister">
+                <div class="cardregister-top">
+                  <div class="cardr-text">
+                     <h1  class="title">Somos tu soporte</h1>
+                     <h4 class="subtitle">Cuando mas lo necesites!!</h4>
+                  </div>
+                    
+                  
+                </div>
+                 <div class="cardregister-bottom">
+            
+                   <button class="btncerrar" (click)="cerrar()" >Empezar !</button>
+                </div>
+               
+            </div>
+        </div>
 
-         
+        <div class="cuerpodos">
+            <header class="headerdos">
+                <h2> Registre su consulta</h2>
+            </header>
+            <mat-horizontal-stepper class="stepperhz" [linear]="!isLinear" #stepper>
+                <mat-step [stepControl]="firstFormGroup">
+                    <form [formGroup]="firstFormGroup">
+                        <ng-template matStepLabel>Motivo</ng-template>
+                        <body>
+                            <input type="checkbox" formControlName="firstCtrl" [checked]="ischeck" id="checkprincipal" />
 
-          
+                            <div class="wrapper">
+                                <div class="title">
+                                    ¿Cuentas cual es tu problema?
+                                </div>
+                                <div class="container">
+                                    <label class="option_item">
+                                        <input type="checkbox" class="checkbox" (click)="seleccionaritems(1)" />
+                                        <div class="option_inner alimentacion" id="alimentacion">
+                                            <div class="alimentacion card-style"></div>
+                                            <div class="name">Alimentacion</div>
+                                        </div>
+                                    </label>
+                                    <label class="option_item">
+                                        <input type="checkbox" class="checkbox" (click)="seleccionaritems(2)" />
+                                        <div class="option_inner ansiedad" id="ansiedad">
+                                            <div class="ansiedad card-style"></div>
+                                            <div class="name">Ansiedad</div>
+                                        </div>
+                                    </label>
+                                    <label class="option_item">
+                                        <input type="checkbox" class="checkbox" (click)="seleccionaritems(3)" />
+                                        <div class="option_inner depresion" id="depresion">
+                                            <div class="depresion card-style"></div>
+                                            <div class="name">Depresion</div>
+                                        </div>
+                                    </label>
+                                    <label class="option_item">
+                                        <input type="checkbox" class="checkbox" (click)="seleccionaritems(4)" />
+                                        <div class="option_inner suicidio" id="suicidio">
+                                            <div class="suicidio card-style"></div>
+                                            <div class="name">Suicidio</div>
+                                        </div>
+                                    </label>
+                                    <label class="option_item">
+                                        <input type="checkbox" class="checkbox" (click)="seleccionaritems(5)" />
+                                        <div class="option_inner familiar" id="familiar">
+                                            <div class="familiar card-style"></div>
+                                            <div class="name">Familiar</div>
+                                        </div>
+                                    </label>
+                                    <label class="option_item">
+                                        <input type="checkbox" class="checkbox" (click)="seleccionaritems(6)" />
+                                        <div class="option_inner fobia" id="fobia">
+                                            <div class="fobia card-style"></div>
+                                            <div class="name">Fobia</div>
+                                        </div>
+                                    </label>
+                                    <label class="option_item">
+                                        <input type="checkbox" class="checkbox" (click)="seleccionaritems(7)" />
+                                        <div class="option_inner bulling"   id="bulling">
+                                            <div class="bulling card-style"></div>
+                                            <div class="name">Bulling</div>
+                                        </div>
+                                    </label>
+                                    <label class="option_item">
+                                        <input type="checkbox" class="checkbox" (click)="seleccionaritems(8)" />
+                                        <div class="option_inner otra" id="otra">
+                                            <div class="otra card-style"></div>
+                                            <div class="name">Otra</div>
+                                        </div>
+                                    </label>
+                                </div>
+                            </div>
+                        </body>
 
-				</form>
-			</div>
-		</div>
-	</div>
-	
+                        <div>
+                            <button mat-raised-button (click)="crearlista2()" matStepperNext>Siguiente</button>
+                        </div>
+                    </form>
+                </mat-step>
+                <mat-step [stepControl]="secondFormGroup" errorMessage="Address is required.">
+                    <form [formGroup]="secondFormGroup">
+                        <ng-template matStepLabel>Tipo de Paciente</ng-template>
+                        <body>
+                            <input type="checkbox" formControlName="secondCtrl"  id="checksecundario" />
+
+                            <div class="wrapper">
+                                <div class="title">
+                                        Tipo de Paciente
+                                </div>
+                                <div class="container">
+                                    <label class="option_item">
+                                        <input type="checkbox" class="checkbox" (click)="seleccionaredad(1)" />
+                                        <div class="option_inner mayor" id="mayor">
+                                            <div class="mayor card-style"></div>
+                                            <div class="name">Mayor</div>
+                                        </div>
+                                    </label>
+                                    <label class="option_item">
+                                        <input type="checkbox" class="checkbox" (click)="seleccionaredad(2)" />
+                                        <div class="option_inner adulto" id="adulto">
+                                            <div class="adulto card-style"></div>
+                                            <div class="name">Adulto</div>
+                                        </div>
+                                    </label>
+                                    <label class="option_item">
+                                        <input type="checkbox" class="checkbox" (click)="seleccionaredad(3)" />
+                                        <div class="option_inner joven" id="joven">
+                                            <div class="joven card-style"></div>
+                                            <div class="name">Joven</div>
+                                        </div>
+                                    </label>
+                                    <label class="option_item">
+                                        <input type="checkbox" class="checkbox" (click)="seleccionaredad(4)" />
+                                        <div class="option_inner niño" id="niño">
+                                            <div class="niño card-style"></div>
+                                            <div class="name">Niño</div>
+                                        </div>
+                                    </label>
+                                  
+                                </div>
+                            </div>
+                        </body>
+
+                        <div>
+                             <button mat-raised-button id="cancelbtn"  matStepperPrevious>Back</button>
+                             <button mat-raised-button  matStepperNext>Siguiente</button>
+                        </div>
+                        
+                            
+                        
+                    </form>
+                </mat-step>
+                <mat-step>
+                    <ng-template matStepLabel>Datos</ng-template>
+                       <form  class="login-form">
+                           <div class="input-group ">
+		                        <label class="input-fill">
+		                        <input type="email" name="email" id="email" required />
+		                        <span class="input-label">Correo Electrónico</span>
+		                        <i class="fas fa-envelope"></i>
+		                        </label>
+	                        </div>
+	                        <div class="input-group">
+		                        <label class="input-fill">
+		                        <input type="password" name="password" id="password" required />
+		                        <span class="input-label">Contraseña</span>
+		                        <i class="fas fa-lock"></i>
+		                        </label>
+	                        </div>
+                             <div class="input-group">
+		                        <label class="input-fill">
+		                        <input type="email" name="email" id="email" required />
+		                        <span class="input-label">Correo Electrónico</span>
+		                        <i class="fas fa-envelope"></i>
+		                        </label>
+	                        </div>
+	                        <div class="input-group">
+		                        <label class="input-fill">
+		                        <input type="password" name="password" id="password" required />
+		                        <span class="input-label">Contraseña</span>
+		                        <i class="fas fa-lock"></i>
+		                        </label>
+	                        </div>
+                             <div class="input-group">
+		                        <label class="input-fill">
+		                        <input type="email" name="email" id="email" required />
+		                        <span class="input-label">Correo Electrónico</span>
+		                        <i class="fas fa-envelope"></i>
+		                        </label>
+	                        </div>
+	                        <div class="input-group">
+		                        <label class="input-fill">
+		                        <input type="password" name="password" id="password" required />
+		                        <span class="input-label">Contraseña</span>
+		                        <i class="fas fa-lock"></i>
+		                        </label>
+	                        </div>
+	                        
+                          
+	                       
+	                      
+                        </form>
+                    <div>
+                        <button mat-raised-button id="cancelbtn"  matStepperPrevious>Back</button>
+                        <button mat-raised-button (click)="stepper.reset()">Registrarse</button>
+                    </div>
+                </mat-step>
+            </mat-horizontal-stepper>
+        </div>
+    </div>
+</div>
