--- a/src/app/Usuarios/login/login.component.css
+++ b/src/app/Usuarios/login/login.component.css
@@ -1,14 +1,28 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap");
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Dosis', sans-serif;
 }
+
+.nav_var{
+  position: absolute;
+  background-color: #00a99d;
+  color: white;
+  z-index: 6;
+  width: 100vw;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+
+}
+.cabezera i{
+  color: #00a99d;
+  font-size: 20px;
+}
 .logo{
-  font-weight: 700;
-  color:#00a99d ;
+  font-weight: 600;
+  font-size: 25px;
 }
 .padre{
   width: 100vw;
@@ -18,12 +32,9 @@
 }
 .cabezera{
   width: 400px;
-  margin-top: 20px;
-  margin-left: 40px;
-  
   align-items: center;
   display: flex;
-  height: 100px;
+  height: 50px;
 }
 .hijouno{
   width: 40%;
@@ -36,7 +47,7 @@
  
 }
 .cuerpocard{
-  margin-top: 40px;
+  margin-top: 120px;
   margin-left: 40px;
   height: auto;
   background-color: #000;
@@ -48,12 +59,27 @@
 .card{
   padding: 10px;
 }
+.login-psico{
+  font-weight: 600;
+ color: white;
+  font-size: 25px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+.login-psico-div{
+  
+ display: flex;
+ justify-content: flex-end;
+ align-items: center;
+ margin-right: 20px;
+}
 #cuerpouno{
   background-color: white;
   width: inherit;
   height: inherit;
   top: 0;
-  padding: 5% 8%;
+  
+  padding: 3% 8%;
   text-align: center;
   left:40vw ;
   position: absolute;
@@ -65,9 +91,10 @@
 
 .cardregister{
   background-color: #00a99d;
+  margin-top: 50px;
   width: 100%;
   border-radius: 40px;
-  height: 100%;
+  height: 80%;
 }
 .cardregister-top{
   background-image: url("http://oidoamigo.org/wp-content/uploads/2021/05/Slider2.jpg");
@@ -77,11 +104,7 @@
   height: 80%;
   border-radius: 40px;
 }
-.title{
-  color: #00a99d;
-  font-weight: 700;
 
-}
 .subtitle{
   color: #00a99d;
   font-weight: 300;
@@ -107,41 +130,51 @@
 .cuerpodos{
   position: absolute;
  border: 3px solid #00a99d;
+  margin-top: 55px;
   width: 100% inherit;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
   height: 100% inherit  ;
   z-index: 1;
-  border-radius: 35px;
+
 }
 .headerdos{
   text-align: center;
-  border-radius: 80px;
+ 
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100% inherit;
-  height: 50px;
+  height: 35px;
   background-color: #00a99d;
   color: white;
   
 }
 .headerdos h2{
-  font-weight: 700;
+  font-weight: 400;
+  font-size: 25px;
   
 }
 .hijodos{
   width: 60%;
-  padding: 20px;
+  padding-left: 80px;
+  padding-right: 20px;
+  padding-top: 20px;
   height: 100vh;
   
 }
-
+::ng-deep .mat-form-field-wrapper{
+  margin-bottom: -1.25em;
+}
 
 #iconogeneral{
   background-image: url('../login/imgLogin/oido2.jpg');
-  width: 100px;
-  margin-top: 20px;
+  width: 60px;
+  
   margin-left: 20px;
-  height: 100px;
+  height: 60px;
   background-size: cover;
   
 }
@@ -150,11 +183,22 @@ body {
   width: 100% inherit;
   height: 100% inherit;
 }
+.title{
+  color: #00a99d;
+  font-weight: 700;
+}
 
+.title-motivo{
+  color: white;
+  font-weight: 400;
+  text-align: center;
+  font-size: 20px;
+
+}
 .wrapper {
   width: 650px;
-  height: 80%;
-  margin: 10px auto 10px;
+  height: 60%;
+  margin: 10px auto 0px;
   
 }
 .stepperhz{
@@ -176,7 +220,7 @@ body {
   display: flex;
   
   flex-wrap: wrap;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 .ansiedad{
   background-image: url(../login/imgLogin/ansiedad.jpg);
@@ -282,122 +326,93 @@ body {
 }
 
 
+.btn-step{
+  color: white;
+  font-weight: 600;
+}
 
 
 
-
-
-
+.large{
+  grid-column: 1/3;
+  width: 96%;
+  height: 50px;
+}
 
 .login-form{
   width: 100%;
   
   height: 300px;
-  padding: 40px;
+  padding-left: 30px;
+  padding-right: 20px;
   display: grid;
+  column-gap: 5px;
   grid-template-columns: 1fr 1fr;
+  grid-row: 20px 40px 40px 40px;
 }
 
 
-
-
-.login-data {
-  text-align: center;
-  width: 60%;
-}
-
-.login-data h1 {
-  font-weight: 200;
-}
-
-.input-group {
-  position: relative;
-  width: 60%;
-  margin: 0 auto;
-  margin-bottom: 1.5rem;
-}
-
-.input-fill input {
-  border: none;
-  border-bottom: 3px solid #848f9a;
-  width: 100%;
-  height: 2rem;
-  font-size: 1.0625rem;
-  padding-left: 2rem;
-  line-height: 147.6%;
-  padding-top: 1rem;
-  padding-bottom: 0.5rem;
-}
-
-.input-fill input:focus {
-  outline: none;
-  border-color: #6c1aef;
-}
-
-.input-fill input:hover {
-  background-color: #e9ecef;
-}
-
-.input-fill input:focus + .input-label {
-  top: 0;
-  margin-bottom: 2rem;
-  color: #6c1aef;
-}
-
-.input-fill input:focus ~ i {
-  color: #6c1aef;
-}
-
-.input-fill .input-label {
-  position: absolute;
-  top: 15px;
-  left: 28px;
-  line-height: 147.6%;
-  color: #848f9a;
-  transition: top 0.2s;
-  font-weight: 700;
-}
-
-.input-fill i {
-  position: absolute;
-  top: 19px;
-  left: 0;
-  color: #848f9a;
-  font-size: 1.5rem;
-}
-
-.login-form a {
-  display: block;
-  width: 85%;
-  text-align: right;
-  text-decoration: none;
-  color: #848f9a;
-  margin-bottom: 1.3rem;
-  font-weight: 800;
-  transition: 0.3s ease-in-out all;
-  font-size: 18px;
-}
-
-.login-form a:hover {
-  color: #6c1aef;
-}
-
-.btn-login {
-  border-radius: 3rem;
-  width: 45%;
-  border: 1px solid #6c1aef;
-  line-height: 1.6rem;
-  font-size: 1.3rem;
-  background-color: #6c1aef;
-  color: #ffffff;
-  padding: 0.5rem 0;
-  transition: 0.3s ease-in-out all;
+.example-full-width{
+  width: 90%;
+  padding: 0px;
   font-weight: 500;
+  
+  height: 30px;
 }
 
-.btn-login:hover {
-  cursor: pointer;
-  background-color: #ffffff;
-  color: #6c1aef;
+
+::ng-deep .mat-horizontal-content-container{
+ 
+  padding-bottom: 8px !important;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
