--- a/src/app/Usuarios/login/login.component.html
+++ b/src/app/Usuarios/login/login.component.html
@@ -1,9 +1,25 @@
-<div class="padre">
-    <div class="hijouno">
+<head>
+ <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+
+
+<header class="nav_var">
         <div class="cabezera">
             <div id="iconogeneral"></div>
             <h1 class="logo">Oido Amigo</h1>
+          
         </div>
+        <div class="login-psico-div">
+              <a class="login-psico" (click)="loginpsi()">
+              Inicio de Sesion
+              </a>
+              <i class="material-icons">input</i>
+            </div>
+</header>
+
+<div class="padre">
+    <div class="hijouno">
+        
         <div class="cuerpocard">
             <div class="card" style="width: 100%,height:100%">
                 <img class="card-img-top" src="https://blog.saludsa.com/hubfs/Imagenes%20Blog/shutterstock_573804736%20%281%29.jpg" alt="Card image cap" />
@@ -15,11 +31,13 @@
     </div>
     <div class="hijodos">
         <div class="cuerpouno" id="cuerpouno">
+            
             <div class="cardregister">
                 <div class="cardregister-top">
                   <div class="cardr-text">
                      <h1  class="title">Somos tu soporte</h1>
                      <h4 class="subtitle">Cuando mas lo necesites!!</h4>
+                     <i class="material-icons">add_alert</i>
                   </div>
                     
                   
@@ -44,8 +62,8 @@
                             <input type="checkbox" formControlName="firstCtrl" [checked]="ischeck" id="checkprincipal" />
 
                             <div class="wrapper">
-                                <div class="title">
-                                    ¿Cuentas cual es tu problema?
+                                <div class="title-motivo">
+                                    ¿Cuentanos cual es tu problema?
                                 </div>
                                 <div class="container">
                                     <label class="option_item">
@@ -109,7 +127,7 @@
                         </body>
 
                         <div>
-                            <button mat-raised-button (click)="crearlista2()" matStepperNext>Siguiente</button>
+                            <button mat-raised-button  class="btn-step" (click)="crearlista2()" matStepperNext>Siguiente</button>
                         </div>
                     </form>
                 </mat-step>
@@ -158,8 +176,8 @@
                         </body>
 
                         <div>
-                             <button mat-raised-button id="cancelbtn"  matStepperPrevious>Back</button>
-                             <button mat-raised-button  matStepperNext>Siguiente</button>
+                             <button mat-raised-button id="cancelbtn" class="btn-step" matStepperPrevious>Back</button>
+                             <button mat-raised-button   class="btn-step" matStepperNext>Siguiente</button>
                         </div>
                         
                             
@@ -169,56 +187,58 @@
                 <mat-step>
                     <ng-template matStepLabel>Datos</ng-template>
                        <form  class="login-form">
-                           <div class="input-group ">
-		                        <label class="input-fill">
-		                        <input type="email" name="email" id="email" required />
-		                        <span class="input-label">Correo Electrónico</span>
-		                        <i class="fas fa-envelope"></i>
-		                        </label>
-	                        </div>
-	                        <div class="input-group">
-		                        <label class="input-fill">
-		                        <input type="password" name="password" id="password" required />
-		                        <span class="input-label">Contraseña</span>
-		                        <i class="fas fa-lock"></i>
-		                        </label>
-	                        </div>
-                             <div class="input-group">
-		                        <label class="input-fill">
-		                        <input type="email" name="email" id="email" required />
-		                        <span class="input-label">Correo Electrónico</span>
-		                        <i class="fas fa-envelope"></i>
-		                        </label>
-	                        </div>
-	                        <div class="input-group">
-		                        <label class="input-fill">
-		                        <input type="password" name="password" id="password" required />
-		                        <span class="input-label">Contraseña</span>
-		                        <i class="fas fa-lock"></i>
-		                        </label>
-	                        </div>
-                             <div class="input-group">
-		                        <label class="input-fill">
-		                        <input type="email" name="email" id="email" required />
-		                        <span class="input-label">Correo Electrónico</span>
-		                        <i class="fas fa-envelope"></i>
-		                        </label>
-	                        </div>
-	                        <div class="input-group">
-		                        <label class="input-fill">
-		                        <input type="password" name="password" id="password" required />
-		                        <span class="input-label">Contraseña</span>
-		                        <i class="fas fa-lock"></i>
-		                        </label>
-	                        </div>
-	                        
+                            <mat-form-field   class="example-full-width " appearance="fill">
+                              <mat-label >Nombres</mat-label>
+                              
+                              <input matInput placeholder="Jorge Benavides" >
+                              <mat-icon matSuffix>person</mat-icon>
+                            </mat-form-field >
+                             <mat-form-field   class="example-full-width" appearance="fill">
+                              <mat-label>Apellidos</mat-label>
+                              <input matInput placeholder="Soledad Lopez" >
+                                <mat-icon matSuffix>person_outline</mat-icon>
+                            </mat-form-field>
+                             <mat-form-field  class="example-full-width" appearance="fill">
+                              <mat-label>Correo electronico</mat-label>
+                              <input matInput placeholder="example@gmail.com" >
+                              <mat-icon matSuffix>email</mat-icon>
+                            </mat-form-field>
+                            <mat-form-field   class="example-full-width" appearance="fill">
+                                <mat-label>Genero</mat-label>
+                                <mat-icon matSuffix>group</mat-icon>
+                                <mat-select>
+                                  <mat-option value="hombre">
+                                    Hombre
+                                  </mat-option>
+                                  <mat-option value="mujer">
+                                    Mujer
+                                  </mat-option>
+                                </mat-select>
+                              </mat-form-field>
+                             <mat-form-field  class="example-full-width" appearance="fill">
+                              <mat-label>Telefono</mat-label>
+                              <input matInput placeholder="999999999" >
+                                 <mat-icon matSuffix>call</mat-icon>
+                            </mat-form-field>
+                             <mat-form-field   class="example-full-width" appearance="fill">
+                              <mat-label>Dni</mat-label>
+                              <input matInput placeholder="88888888" >
+                                <mat-icon matSuffix>payment</mat-icon>
+                            </mat-form-field>
+
+                            <mat-form-field  class="large" appearance="fill">
+                              <mat-label>Descripcion</mat-label>
+                               <mat-icon matSuffix>description</mat-icon>
+                              <textarea matInput placeholder="El motivo de la consulta presente es para ....."></textarea>
+                            </mat-form-field>
+	                       
                           
 	                       
 	                      
                         </form>
                     <div>
-                        <button mat-raised-button id="cancelbtn"  matStepperPrevious>Back</button>
-                        <button mat-raised-button (click)="stepper.reset()">Registrarse</button>
+                        <button mat-raised-button id="cancelbtn"   class="btn-step" matStepperPrevious>Back</button>
+                        <button mat-raised-button  class="btn-step" (click)="stepper.reset()">Registrarse</button>
                     </div>
                 </mat-step>
             </mat-horizontal-stepper>
