--- a/src/app/navbar/nav/nav.component.css
+++ b/src/app/navbar/nav/nav.component.css
@@ -1,3 +1,10 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Dosis', sans-serif;
+  }
+
 #user{
     color: white;
     margin: 5px 20px 0 0;
@@ -6,3 +13,146 @@
     width: 40%;
     height: 40%;
 }
+.menu-p{
+    position: absolute;
+    left: 10px;
+    top: 15px;
+    cursor: auto;
+    color: white;
+    font-size: 20px;
+    font-weight: 900;
+}
+.navbar{
+    height: 10vh;
+    
+}
+.btn-user{
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    background-image: url('https://s3.amazonaws.com/files.patmos.upeu.edu.pe/img/upload/fotos/80/no_photo.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    align-items: center;
+    margin-right: 10px;
+}
+body{
+    width: 100vw;
+    height: 90vh;
+
+}
+.btn-menu label span{
+    margin-top: 10px;
+    margin-left: 20px;
+    margin-right: 10px;
+    color: #fff;
+    
+    font-size: 30px;
+    cursor: pointer;
+}
+
+
+#btn-menu{
+    display: none;
+}
+.container-menu{
+    position: absolute;
+    background: rgba(0,0,0,0.5);
+    width: 100%;
+    height: 100vh;
+    z-index: 3;
+    top: 0;left: 0;
+    transition: all 500ms ease;
+    opacity: 0;
+    visibility: hidden;
+}
+/* #btn-menu:checked ~ .container-menu{
+    opacity: 1;
+    visibility: visible;
+}
+#btn-menu:checked ~ .cont-menu{
+   
+   left: 0;
+} */
+
+.cont-menu{
+    position: absolute;
+    width: 100%;
+    max-width: 250px;
+    background:#11111d ;
+    height: 100vh;
+    z-index: 4;
+    transition: all 500ms ease;
+    top: 0;
+    left: -250px;
+}
+.cont-menu-title{
+    width: 100%;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    background-color: #49a0a1;
+    height: 10vh;
+     color: white;
+}
+.cont-menu-title label{
+    cursor: pointer;
+    margin-left: 100px;
+    font-size: 20px;
+
+}
+.cont-menu-title h3{
+    
+    font-weight: 700;
+    color: #00a99d;
+
+}
+
+.cont-menu-nav{
+    width: 100%;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+
+    background-color: white;
+    height: 90vh;
+}
+
+.close-menu{
+    position: absolute;
+    right: 5px;
+    top: 15px;
+    width: 100%;
+    color: #fff;
+    cursor: pointer;
+    font-size: 18px;
+}
+.nava{
+   
+   
+    color: #00a99d;
+    margin-top: 10px;
+    display: flex;
+    height: 50px;
+    font-weight: 600;
+    justify-content: space-between;
+    align-content: center;
+    width: 100%;
+    padding: 12px;
+    transition: 500ms ease;
+   
+
+}
+.nava span{
+ font-size: 20px;
+
+}
+.nava:hover{
+    cursor: pointer;
+    background-color: #49a0a1;
+    border-radius: 10px;
+    
+    color: white;
+   }
