--- a/src/app/navbar/nav/nav.component.html
+++ b/src/app/navbar/nav/nav.component.html
@@ -1,31 +1,58 @@
-<nav class="navbar navbar-expand-lg bg " style="color:white;background-color:#05678e">
+<head>
+ <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+
+
+<nav class="navbar navbar-expand-lg bg " style="color:white;background-color:#00a99d">
  <div class="container-fluid">
+    <div class="btn-menu" >
+			<label for="btn-menu" (click)="cerrar()"><span class="material-icons">
+menu
+</span>
+</label>
+		</div>
     <a class="navbar-brand"  style="color:white;"><img id="img" src="https://s3.amazonaws.com/files.patmos.upeu.edu.pe/statics/app-assets/images/logo-upeu-blanco.png"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        
-       
-        
-       
       </ul>
       <form class="d-flex">
-      <h5 id="user" *ngIf="nombre" >{{(nombre + ' '  +apellido) | uppercase}}</h5>
-      <button mat-mini-fab color="green" [matMenuTriggerFor]="menu">
-          <mat-icon>person</mat-icon>
+       <h5 id="user" *ngIf="nombre" >{{(nombre ) | uppercase}}</h5>
+        <button mat-mini-fab  class=" btn-user" color="green" [matMenuTriggerFor]="menu">
+          
         </button>
        
             <mat-menu #menu="matMenu">
             
-                <button mat-menu-item [routerLink]="['archivos']" ><mat-icon>folder</mat-icon>Archivos</button>
-                  <button mat-menu-item [routerLink]="['mensajes']" ><mat-icon>email</mat-icon>Mensajes </button>
-                <button (click)="logout()"mat-menu-item><mat-icon>power_settings_new</mat-icon>Salir        </button>
+                <button mat-menu-item [routerLink]="['perfil_user']" ><mat-icon>person</mat-icon>Perfil</button>
+              
+                <button (click)="logout()"mat-menu-item><mat-icon>power_settings_new</mat-icon>Salir</button>
             </mat-menu>
       </form>
     </div>
   </div>
 </nav>
-
+<body>
+ 
 <router-outlet></router-outlet>
+</body>
+
+<input type="checkbox" id="btn-menu">
+   <div class="container-menu" id="container-menu">
+
+   </div>   
+
+	<div class="cont-menu" id="cont-menu">
+     <div class="cont-menu-title">
+       <h5>Menu Principal</h5>
+       <label for="btn-menu" (click)="cerrar()" class="material-icons">sort</label>
+	   </div>
+      <div class="cont-menu-nav" *ngIf="roles">
+       <div class="nava" *ngFor="let op of roles" routerLink="{{op.ruta}}" (click)="cerrar()">
+         <a >{{op.nombre}}</a><mat-icon >{{op.icono}}</mat-icon>
+       </div>
+     
+	   </div>	
+	</div>
