--- a/src/app/pages/gest-op/gest-op.component.css
+++ b/src/app/pages/gest-op/gest-op.component.css
@@ -47,7 +47,12 @@ body{
     background-color: blue;
     border: none;
 }
-
-
+.example-full-width{
+    margin-right: 8px;
+    width: 80%;
+}
+.modal-body{
+    padding: 30px;
+}
 
 
