--- a/src/app/pages/gest-op/gest-op.component.html
+++ b/src/app/pages/gest-op/gest-op.component.html
@@ -2,42 +2,8 @@
 
 <mat-tab-group mat-align-tabs="center" color="accent"   backgroundColor="primary" mat-stretch-tabs class="example-stretched-tabs mat-elevation-z4">
   
-  <mat-tab label=" Gestionar roles"> 
-
-
-  <div class="cuerpo_gestion">
-     <div class="form">
-     <button   type="button" id="registerbtnrol" class="btn btn-bg-success" class="btn btn-primary" data-toggle="modal" data-target="#createrrolmodal"><mat-icon matSuffix>add</mat-icon></button>
-     <label>Roles:</label>
-         <select class="form-select"   [(ngModel)]="rolactual" >
-         <option value="" selected>-- none --</option>
-           <option *ngFor="let rol of roles"  value="{{rol.idrol}}">{{rol.nombre}}</option>
-        </select>
-     </div>
-
-      <div class="buttons">
-        <button  type="button" class="btn btn-danger" [disabled]="!rolactual" (click)="eliminarrol()">Eliminar</button>
-      <button   type="button" class="btn btn-primary" [disabled]="!rolactual" (click)="getrol()" class="btn btn-primary" data-toggle="modal" data-target="#modifyrolmodal">Modificar</button>
-      <button   type="button" class="btn btn-primary" [disabled]="!rolactual" (click)="getopcionesdisponibles()" class="btn btn-primary" data-toggle="modal" data-target="#agregaropcionrol">Agregar opcion </button>
-        
-     </div>
-
-
-    
-
-     
-  </div>
-
-
-
-  
-  
-  </mat-tab>
-
-
-
   <mat-tab label="Gestionar opciones"> 
- <div class="cuerpo_gestion">
+    <div class="cuerpo_gestion">
      <div class="form">
       <button   type="button"  id="registerbtnrol" class="btn btn-success" class="btn btn-primary" data-toggle="modal" data-target="#createropcmodal"><mat-icon matSuffix>add</mat-icon></button>
      <label>Opciones:</label>
@@ -63,8 +29,89 @@
   </mat-tab>
 
 
+
+
+  <mat-tab label=" Gestionar roles"> 
+  <div class="cuerpo_gestion">
+     <div class="form">
+     <button   type="button" id="registerbtnrol" class="btn btn-bg-success" class="btn btn-primary" data-toggle="modal" data-target="#createrrolmodal"><mat-icon matSuffix>add</mat-icon></button>
+     <label>Roles:</label>
+         <select class="form-select"   [(ngModel)]="rolactual" >
+         <option value="" selected>-- none --</option>
+           <option *ngFor="let rol of roles"  value="{{rol.idrol}}">{{rol.nombre}}</option>
+        </select>
+     </div>
+
+      <div class="buttons">
+        <button  type="button" class="btn btn-danger" [disabled]="!rolactual" (click)="eliminarrol()">Eliminar</button>
+      <button   type="button" class="btn btn-primary" [disabled]="!rolactual" (click)="getrol()" class="btn btn-primary" data-toggle="modal" data-target="#modifyrolmodal">Modificar</button>
+      <button   type="button" class="btn btn-primary" [disabled]="!rolactual" (click)="getopcionesdisponibles()" class="btn btn-primary" data-toggle="modal" data-target="#agregaropcionrol">Agregar opcion </button>
+        
+     </div>
+
+
+    
+
+     
+  </div>
+  </mat-tab>
+
+
+
+
+
   <mat-tab label="Gestionar Rol-Usuario">
-   <div class="cuerpo_gestion">
+   <div class="cuerpo_gestion_dos">
+   <mat-form-field  class="filter" appearance="standard">
+  <mat-label>Filtrar por columnas</mat-label>
+  <input matInput (keyup)="applyFilter($event)" placeholder="nombre de usuario" #input>
+</mat-form-field>
+
+<table mat-table *ngIf="datausuario" [dataSource]="dataSource" class="mat-elevation-z8">
+
+  <!-- Position Column -->
+  <ng-container matColumnDef="nro">
+    <th mat-header-cell *matHeaderCellDef> No. </th>
+    <td mat-cell *matCellDef="let element; let i = index;"> {{i+1}} </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="usuario">
+    <th mat-header-cell *matHeaderCellDef> Usuario </th>
+    <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="nombres">
+    <th mat-header-cell *matHeaderCellDef> Nombres </th>
+    <td mat-cell *matCellDef="let element"> {{element.nombre + element.apellido}} </td>
+  </ng-container>
+
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="opciones">
+    <th mat-header-cell *matHeaderCellDef> Roles asigandos </th>
+    <td mat-cell *matCellDef="let element"> 
+        <button  type="button" data-toggle="modal" data-target="#detallerol" (click)="listarrolesactuales(element.idusuario)" class="detalle_rol"> <mat-icon matSuffix>visibility</mat-icon></button>
+         
+    </td>
+  </ng-container>
+    <ng-container matColumnDef="opciones2">
+    <th mat-header-cell *matHeaderCellDef> Agregar rol </th>
+    <td mat-cell *matCellDef="let element"> 
+     
+         <button  type="button" class="detalle_rol" data-toggle="modal" data-target="#agregarroluser" (click)="agregarrol_user(element.idusuario)"><mat-icon matSuffix>group_add</mat-icon></button>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+  <!-- Row shown when there is no matching data. -->
+  <tr class="mat-row" *matNoDataRow>
+    <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+  </tr>
+</table>
+
   </div>
    </mat-tab>
 
@@ -119,7 +166,7 @@
         </select>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" (click)="cerrarrol()" data-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-secondary"  (click)="cerrarrolactual()"    data-dismiss="modal">Cerrar</button>
         <button type="button" class="btn btn-primary" [disabled]="!opciondisp" (click)="asignarol_usuario()" data-dismiss="modal">Guardar cambios</button>
       </div>
     </div>
@@ -229,3 +276,70 @@
   </div>
 </div>
    
+
+
+ <!-- Modal Agregar rol a  Usuario -->
+<div class="modal fade" id="agregarroluser"  role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        
+        <h5 class="modal-title"  id="exampleModalLongTitle">Agregar Rol a Usuario</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+         <label>Roles Disponibles:</label>
+         <select class="form-select"   [(ngModel)]="rolactualdisp" *ngIf="rolesdisponibles" >
+         <option value="" selected>-- none --</option>
+           <option *ngFor="let rol of rolesdisponibles"  value="{{rol.idrol}}">{{rol.nombre}}</option>
+        </select>
+      </div>
+      <div class="modal-footer">
+
+        <button type="button" class="btn btn-secondary" (click)="cerrarrolactual()"  data-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-primary" [disabled]="!rolactualdisp" (click)="asignaropc_usuario()" data-dismiss="modal">Guardar cambios</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<!-- Modal Mostrar opciones actuales del rol -->
+<div class="modal fade" id="detallerol"  role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        
+        <h5 class="modal-title"  id="exampleModalLongTitle">Roles del Usuario</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+         
+         <table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Nombre</th>
+    </tr>
+  </thead>
+  <tbody *ngIf="rolesactualesdeluser">
+    <tr *ngFor="let rol of rolesactualesdeluser ;let i= index">
+      <th scope="row">{{i+1}}</th>
+      <td>{{rol.nombre}}</td>
+    </tr>
+  </tbody>
+</table>
+      </div>
+      <div class="modal-footer">
+
+        <button type="button" class="btn btn-secondary"(click)="cerrardata()"  data-dismiss="modal">Cerrar</button>
+        
+      </div>
+    </div>
+  </div>
+</div>
