--- a/src/app/navbar/nav/nav.component.html
+++ b/src/app/navbar/nav/nav.component.html
@@ -3,7 +3,7 @@
 </head>
 
 
-<nav class="navbar navbar-expand-lg bg " style="color:white;background-color:#00a99d">
+<nav class="navbar navbar-expand-lg bg " style="color:white;background-color:#992e45 ">
  <div class="container-fluid">
     <div class="btn-menu" >
 			<label for="btn-menu" (click)="cerrar()"><span class="material-icons">
@@ -40,7 +40,7 @@ menu
 </body>
 
 <input type="checkbox" id="btn-menu">
-   <div class="container-menu" id="container-menu">
+   <div class="container-menu" (click)="cerrar()" id="container-menu">
 
    </div>   
 
