--- a/src/app/pages/gest-op/gest-op.component.css
+++ b/src/app/pages/gest-op/gest-op.component.css
@@ -9,6 +9,22 @@ body{
     background-color: #dedbe4;
     
 }
+.modal-content  {
+    -webkit-border-radius: 0px !important;
+    -moz-border-radius: 0px !important;
+    border-radius: 20px !important; 
+}
+.modal {
+    position: absolute;
+    border-radius: 50px;
+    top: 100px;
+    right: 100px;
+    bottom: 0;
+    left: 0;
+    z-index: 10040;
+    overflow: auto;
+    overflow-y: auto;
+ }
 .cuerpo_gestion{
     width: 100%;
     height: 20vh;
