--- a/src/app/pages/gest-op/gest-op.component.html
+++ b/src/app/pages/gest-op/gest-op.component.html
@@ -93,7 +93,7 @@
 
 <!-- Modal Eliminar Opciones de rol -->
 <div class="modal fade" id="deleteoprol" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog " role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLongTitle">Opciones actuales del Rol</h5>
@@ -129,7 +129,7 @@
 
 <!-- Modal Modificar Rol -->
 <div class="modal fade" id="modifyrolmodal" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog " role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLongTitle">Modificar Rol</h5>
@@ -154,7 +154,7 @@
 
 <!-- Modal Agregar opcion a  Rol -->
 <div class="modal fade" id="agregaropcionrol" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog " role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLongTitle">Agregar opcion al Rol</h5>
@@ -178,7 +178,7 @@
 </div>
 <!-- Modal Crear Rol-->
 <div class="modal fade" id="createrrolmodal" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog " role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLongTitle">Registrar Rol</h5>
@@ -204,7 +204,7 @@
 
 <!-- Modal  Modificar opciones-->
 <div class="modal fade" id="modifyopcmodal" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog " role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLongTitle">Modificar Opciones</h5>
@@ -239,7 +239,7 @@
 
 <!-- Modal Crear opciones-->
 <div class="modal fade" id="createropcmodal" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog " role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLongTitle">Registrar Opciones</h5>
@@ -275,7 +275,7 @@
 
 <!-- Modal Agregar rol a  Usuario -->
 <div class="modal fade" id="agregarroluser" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLongTitle">Agregar Rol a Usuario</h5>
@@ -300,15 +300,17 @@
 
 <!-- Modal Mostrar roles actuales del usuario -->
 <div class="modal fade" id="detallerol" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
+    <div class="modal-dialog " role="document">
+        <div class="modal-content ">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLongTitle">Roles del Usuario</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
+            <app-spinner-blanc *ngIf="cargando"></app-spinner-blanc>
+            <div class="modal-body" *ngIf="!cargando">
+               
                 <h3 *ngIf="rolesactualesdeluser.length==0">No se encontraron roles asignados a este usuario!</h3>
                 <table class="table" *ngIf="rolesactualesdeluser.length>=1" style="width: 100%;">
                     <thead>
