--- a/src/app/pages/gest-op/gest-op.component.css
+++ b/src/app/pages/gest-op/gest-op.component.css
@@ -1,3 +1,4 @@
+@import 'material-icons/iconfont/material-icons.css';
 *{
     font-family: 'Comfortaa', cursive;
 }
@@ -8,6 +9,39 @@ body{
     padding: 40px;
     background-color: #dedbe4;
     
+}
+.header{
+    
+    margin: 0px auto 10px auto;
+    width: 30%;
+    color: #666;
+    display: flex;
+    
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    border-radius: 20px;
+    box-shadow:  0px 5px 5px 0px rgba(0,0,0,0.2);
+
+    height: 50px;
+  
+
+}
+h5{
+    margin: 0;
+}
+.container2{
+    width: 100%;
+    height: 80%;
+    
+    display: flex;
+}
+.container{
+    border-radius: 20px;
+    width: 90%;
+    height: 75vh;
+    background-color: white;
+    padding: 10px;
 }
 .modal-content  {
     -webkit-border-radius: 0px !important;
@@ -21,37 +55,48 @@ body{
     right: 100px;
     bottom: 0;
     left: 0;
-    z-index: 10040;
-    overflow: auto;
+   
     overflow-y: auto;
  }
 .cuerpo_gestion{
     width: 100%;
     height: 20vh;
     background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    padding: 40px;
-   
+   display: flex;
+    padding: 20px;
+    
+
 }
 
 .form{
+    width: 100%;
     display: flex;
     justify-content: center;
+    margin-bottom: 40px;
        align-items: center;
+}
+.buttons{
+     width : 60%;
+    display: flex;
+    margin-left: 20px;
+    justify-content: flex-start;
+    align-items: center;
+    
+
 }
 .form label{
     margin-right: 30px;
 }
 
-.buttons{
-      margin-left: 50px;
-}
+
 .buttons button{
     margin-left: 20px;
     border-radius: 5px;
+    height: 50px;
     border: none;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .buttons .update{
@@ -82,27 +127,30 @@ body{
     
 }
 
-/* Structure */
-table {
-    width: 70%;
-    
-  }
+
+
+.img-gestop{
+    width: 40%;
+    height: 100%;
   
-  .filter {
-    font-size: 14px;
-    width: 70%;
-    
-  }
-.cuerpo_gestion_dos{
-    width: 100%;
-    padding-left: 20%;
-    height: 40vh;
-    background-color: white;
-    
 }
-.detalle_rol{
-    
-    border: none;
-    color: gray;
+.img-gestop img{
+    width: 100%;
+    height: 100%;
+}
+.cuerpo2{
+    width: 60%;
+    height: 100%;
+    padding: 10px;
+
 }
 
+.formulario1{
+    width: 100%;
+    height: 50%;
+    
+    
+    padding: 20px;
+    margin: 0;
+    
+}
