--- a/src/app/pages/gest-users/gest-users/gest-users.component.css
+++ b/src/app/pages/gest-users/gest-users/gest-users.component.css
@@ -11,19 +11,29 @@ body{
     
 }
 table {
-    width: 70%;
+    width: 100%;
     
   }
-  
+  .tablegen{
+  margin: 0px auto 0px auto;
+    width: 90%;
+    height: 80%;
+  }
   .filter {
     font-size: 14px;
-    width: 70%;
+    width: 30%;
+    margin-left: 15px;
     
+  }
+  h4{
+      margin: 0 auto 10px auto;
+      width: 40%;
+
   }
 .cuerpo_gestion_dos{
     width: 100%;
-    padding-left: 20%;
-    height: 40vh;
+    padding: 20px;
+    height: 70vh;
     background-color: white;
     
 }
@@ -31,4 +41,90 @@ table {
     
     border: none;
     color: gray;
+}
+
+
+.modal-header{
+    background-color: #992e45;
+    color: white;
+}
+
+.imgsol{
+    width: 50%;
+    margin-left:25%;
+    border-radius: 50%;
+    height: 200px;
+    margin-bottom: 15px;
+}
+
+.detalledata{
+    display: grid;
+    grid-template-columns: 1fr 1fr ;
+    grid-template-rows: 60px;
+}
+
+.largesize{
+    grid-column: 1/3;
+    grid-row: 1;
+}
+
+.detalledata2{
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 50px 1fr  ;
+    grid-template-rows: 60px 60px 60px 60px ;
+}
+.modal-dialog{
+    margin: 0;
+    padding: 0;
+    width: 0vw;
+    height: 0vh;
+}
+.modal-content{
+        margin: 60px 28vw;
+    width: 600px;
+
+}
+.cuerpoasd2{
+    height: 400px;
+    width: 100%;
+}
+
+.largesize2{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    
+
+}
+
+.user{
+   grid-column-start: 1;
+   grid-column-end: 2;
+   width: 80%;
+   margin-left: 20px;
+}
+.pass{
+    grid-column-start: 2;
+    grid-column-end: 4;
+    width: 80%;
+    margin-left: 20px;
+}
+
+.createtitle{
+    grid-column-start: 1;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    grid-column-end: 4;
+}
+
+.largesize3{
+    grid-column-start: 1;
+    grid-column-end: 4;
+    width: 28%;
+    height: 30%;
+    margin: 50px auto 0px auto;
+    background-color: #992e45;
+    color: white;
 }
