--- a/src/app/pages/gest-users/gest-users/gest-users.component.html
+++ b/src/app/pages/gest-users/gest-users/gest-users.component.html
@@ -1,13 +1,15 @@
 <body>
     <mat-tab-group mat-align-tabs="center" color="accent" backgroundColor="primary" mat-stretch-tabs class="example-stretched-tabs mat-elevation-z4">
-           <mat-tab label="Gestionar Usuario-Rol">
+           <mat-tab label="Gestionar Usuarios">
             <div class="cuerpo_gestion_dos">
-                <mat-form-field class="filter" appearance="standard">
-                    <mat-label>Filtrar por columnas</mat-label>
+                 <h4>Lista de Usuarios Activos</h4>
+                  <div class="mat-elevation-z8 tablegen">
+                     <mat-form-field class="filter" appearance="standard">
+                    <mat-label>Buscar...</mat-label>
                     <input matInput (keyup)="applyFilter($event)" placeholder="nombre de usuario" #input />
                 </mat-form-field>
 
-                <table mat-table *ngIf="datausuario" [dataSource]="dataSource" class="mat-elevation-z8">
+                <table mat-table *ngIf="datausuario" [dataSource]="dataSource" >
                     <!-- Position Column -->
                     <ng-container matColumnDef="nro">
                         <th mat-header-cell *matHeaderCellDef>No.</th>
@@ -36,7 +38,7 @@
                     <ng-container matColumnDef="opciones2">
                         <th mat-header-cell *matHeaderCellDef>Agregar rol</th>
                         <td mat-cell *matCellDef="let element">
-                            <button type="button" class="detalle_rol" data-toggle="modal" data-target="#agregarroluser" (click)="agregarrol_user(element.idusuario)"><mat-icon matSuffix>group_add</mat-icon></button>
+                            <button type="button" class="detalle_rol" data-toggle="modal" data-target="#agregarroluser" (click)="agregarrol_user(element.idusuario)"><mat-icon matSuffix>control_point</mat-icon></button>
                         </td>
                     </ng-container>
 
@@ -48,14 +50,20 @@
                         <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
                     </tr>
                 </table>
+                 <mat-paginator [pageSize]="3" [pageSizeOptions]="[1,3]" showFirstLastButtons></mat-paginator>
+                  </div>
             </div>
         </mat-tab>
 
 
         <mat-tab label="Gestionar Solicitudes de Psicologos">
-            <div class="cuerpo_gestion_dos">
-                <mat-form-field class="filter" appearance="standard">
-                    <mat-label>Filtrar por columnas</mat-label>
+             
+            <div class="cuerpo_gestion_dos ">
+                 <h4>Lista de Solicitudes de Psicologos</h4>
+               <div class="mat-elevation-z8 tablegen">
+             
+               <mat-form-field class="filter" appearance="standard">
+                    <mat-label>Buscar..</mat-label>
                     <input matInput (keyup)="applyFilter2($event)" placeholder="nombre de usuario" #input />
                 </mat-form-field>
 
@@ -92,13 +100,13 @@
                     <ng-container matColumnDef="opciones">
                         <th mat-header-cell *matHeaderCellDef>Detalle</th>
                         <td mat-cell *matCellDef="let element">
-                            <button type="button" data-toggle="modal" data-target="#detallerol"  class="detalle_rol"><mat-icon matSuffix>visibility</mat-icon></button>
+                            <button type="button" data-toggle="modal" data-target="#detallepsi" (click)="detallepsi(element)"  class="detalle_rol"><mat-icon matSuffix>visibility</mat-icon></button>
                         </td>
                     </ng-container>
                     <ng-container matColumnDef="opciones2">
                         <th mat-header-cell *matHeaderCellDef>Crear Usuario</th>
                         <td mat-cell *matCellDef="let element">
-                            <button type="button" class="detalle_rol" data-toggle="modal" data-target="#agregarroluser" ><mat-icon matSuffix>group_add</mat-icon></button>
+                            <button type="button" class="detalle_rol" data-toggle="modal" data-target="#crearuser " (click)="crearuser(element)"><mat-icon matSuffix>group_add</mat-icon></button>
                         </td>
                     </ng-container>
 
@@ -110,8 +118,12 @@
                         <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
                     </tr>
                 </table>
+                 <mat-paginator [pageSize]="3" [pageSizeOptions]="[1,3]" showFirstLastButtons></mat-paginator>
+               </div>
+                
             </div>
         </mat-tab>
+
     </mat-tab-group>
 </body>
 
@@ -175,6 +187,116 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" (click)="cerrardata()" data-dismiss="modal">Cerrar</button>
             </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+<!-- Modal Mostrar detalle de la solicitud -->
+<div class="modal fade" id="detallepsi" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog " role="document">
+        <div class="modal-content ">
+            <div class="modal-header">
+                <h6 class="modal-title" id="exampleModalLongTitle">Detalles de la Solicitud</h6>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <app-spinner-blanc *ngIf="cargando"></app-spinner-blanc>
+            <div class="modal-body" *ngIf="!cargando">
+               
+                 <img class="imgsol" src="assets/solicitante.jpg">
+                <div class="detalledata" *ngIf="detalleelemetn" style="width: 100%;">
+                   
+                    <mat-form-field class="example-full-width largesize" appearance="fill">
+                           <mat-label> Nombres del Solicitante</mat-label>
+                           <input matInput placeholder="Ex. Pizza" value="Sushi" [(ngModel)]="detalleelemetn.nombre + '   ' +  detalleelemetn.apellido" disabled>
+                    </mat-form-field>
+
+                    <mat-form-field class="example-full-width" appearance="fill">
+                           <mat-label>Correo</mat-label>
+                           <input matInput placeholder="Ex. Pizza" value="Sushi" [(ngModel)]="detalleelemetn.correo" disabled>
+                    </mat-form-field>
+
+                     <mat-form-field class="example-full-width" appearance="fill">
+                           <mat-label>Especialidad</mat-label>
+                           <input matInput placeholder="Ex. Pizza" value="Sushi" [(ngModel)]="detalleelemetn.especialidad" disabled>
+                    </mat-form-field>
+
+                    <mat-form-field class="example-full-width" appearance="fill">
+                           <mat-label>Universidad</mat-label>
+                            <input matInput placeholder="Ex. Pizza" value="Sushi" [(ngModel)]="detalleelemetn.universidad" disabled>
+                    </mat-form-field>
+
+                     <mat-form-field class="example-full-width" appearance="fill">
+                           <mat-label>Telefono</mat-label>
+                            <input matInput placeholder="Ex. Pizza" value="Sushi" [(ngModel)]="detalleelemetn.telefono" disabled>
+                    </mat-form-field>
+
+                     
+
+                    
+                </div>
+            </div>
+            
+        </div>
+    </div>
+</div>
+
+
+
+<!-- Modal Crear usuario -->
+<div class="modal fade" id="crearuser" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog " role="document">
+        <div class="modal-content ">
+            <div class="modal-header">
+                <h6 class="modal-title" id="exampleModalLongTitle">Generar Usuario</h6>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <app-spinner-blanc *ngIf="cargando"></app-spinner-blanc>
+            <div class="modal-body cuerpoasd2" *ngIf="!cargando">
+            
+                <div class="detalledata2" *ngIf="usuarioelement" style="width: 100%;">
+                       
+                    <h6 class="createtitle">Datos del Solicitante:</h6>
+                    <mat-form-field class=" largesize2" appearance="fill">
+                           <mat-label> Para:</mat-label>
+                           <input matInput placeholder="Ex. Pizza" value="Sushi" [(ngModel)]="usuarioelement.nombre + '   ' +  usuarioelement.apellido" disabled>
+                    </mat-form-field>
+
+                    <mat-form-field class="" appearance="fill">
+                           <mat-label>Correo</mat-label>
+                           <input matInput placeholder="Ex. Pizza" value="Sushi" [(ngModel)]="usuarioelement.correo" disabled>
+                    </mat-form-field>
+
+                    <h6 class="createtitle">Credenciales:</h6>
+
+                     <mat-form-field class="user" appearance="fill">
+                           <mat-label>Usuario</mat-label>
+                           <input matInput placeholder="Ex. Pizza" value="Sushi" [(ngModel)]="usuario.username " >
+                    </mat-form-field>
+                       <mat-form-field class="pass" appearance="fill">
+                           <mat-label>Contraseña</mat-label>
+                           <input matInput placeholder="Ex. Pizza" value="Sushi" [(ngModel)]="usuario.password" >
+                    </mat-form-field>
+
+
+                  
+
+                     
+                   <button class="largesize3 btn " (click)="guardarusuario()" [disabled]="activo==false ">Crear Usuario</button>
+                    
+                </div>
+               
+            </div>
+            
         </div>
     </div>
 </div>
