--- a/src/app/pages/registrar_atencion/registrar-atencion/registrar-atencion.component.css
+++ b/src/app/pages/registrar_atencion/registrar-atencion/registrar-atencion.component.css
@@ -5,73 +5,262 @@
   body{
       width: 100%;
       height: 100%;
-      background-color: #dedbe4;
-      padding-top: 5vh;
+      background-color: white;
+      padding-top: 2vh;
       font-family: 'Dosis', sans-serif;
      
 
   }
-.header{
-    
-    margin: 0px auto 10px auto;
-    width: 30%;
-    color: #666;
-    display: flex;
-    
-    justify-content: center;
-    align-items: center;
-    font-weight: bold;
-    border-radius: 20px;
-    box-shadow:  0px 5px 5px 0px rgba(0,0,0,0.2);
-
-    height: 50px;
-  
-
-}
-h5{
-    margin: 0;
-}
-  .list-cards{
-   
-    
-      height: 85%;
-    
+  .body-content{
       width: 100%;
-      overflow-y: scroll;
-      
+      height: 70vh;
       display: flex;
-     
-      flex-direction: row;
       
-      flex-wrap: wrap;
   }
   .card-body{
-    width: 90vw;
-    height: 80vh;
+    width: 98vw;
+    height: 84vh;
     margin: 0 auto;
     padding-top: 10px;
     
-    border-radius: 20px;
-    box-shadow: 2px 2px 5px #666;
+    
+   
     background-color: white;
 
 }
 
+.list-cards{
+    height: 100%;
+    width: 60%;
+    overflow-y: auto;
+    box-shadow: 0px 0px 10px 0px #666 inset;
+    display: flex;
+    background-color: white;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.listproximasS{
+    height: 100%;
+    width: 40%;
+    padding: 0px 0px 0px 15px;
+    background-color: white;
+}
+.proximassesiones{
+    padding: 10px;
+    width: 100%;
+    height: 90%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    background-color: white ;
+}
+.listproximasS h5{
+    
+    background-color: black;
+    color: white;
+    height: 40px;
+    display: flex;
+    padding-left: 10px;
+    align-items: center;
+}
+.header{
+    margin: 0px auto 10px 0px;
+    width: 100%;
+    
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 50px;
+}
+.imgheader{
+    margin-right: 20px;
+    border-radius: 50%;
+    box-shadow: 1px 4px 4px 0px rgba(0,0,0,0.2);
+    height: 30px;
+    width: 30px;
+}
+.header h5{
+    color: #666;
+    font-weight: bold;
+    font-size: 25px;
+    margin: 0px 0px 0px 15px;
+}
 .card{
-    height: 300px;
+    height: 30vh;
     font-family: 'Dosis', sans-serif;
-   border-radius: 30px;
+   
    box-shadow: 1px 8px 8px 0px rgba(0,0,0,0.2);
-    margin: 30px 10px 10px 40px;
-    width: 300px;
+    margin: 20px auto 10px auto;
+    display: flex;
+    flex-direction: row;
+
+    width: 94%;
 }
 
-.img{
-    width: 50%;
-    box-shadow: 1px 6px 6px 0px rgba(0,0,0,0.2);
-    border-radius: 10px;
-    height: 120px;
+.cardleft{
+  width: 30%;
+ 
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
+.img{
+    width: 60%;
+    box-shadow: 1px 6px 6px 0px rgba(0,0,0,0.2);
+    border-radius: 50%;
+    height: 60%;
+}
+.cardrigth{
+    
+    height: 100%;
+    background-color: #992e45;
+    display: flex;
+    flex-direction: column;
+   
+    justify-content: space-between;
+    align-items: center;    
+    width: 70%;
+}
+.cardrigth h5{
+    text-transform: capitalize;
+    font-weight: bold;
+    color: white;
+}
+.info{
+    width: 100%;
+}
+.descripcion{
+    width: 100%;
+    margin: 0px 10px 0px 10px;
+    color: white;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+}
+.telefono{
+    display: flex;
+ width: 100%;
+ height: 30px;
+ flex-direction: row;
+ color: white;
+ margin: 0px 10px 0px 10px;
+}
+.motivo{
+ display: flex;
+ width: 100%;
+ flex-direction: row;
+ height: 30px;
+ color: white;
+ margin: 0px 10px 0px 10px;
+
+ 
+}
+.motivo1{
+     display: flex;
+     margin: 0;
+     width: 50%;
+     align-items: center;
+}
+.motivo2{
+    display: flex;
+    width: 50%;
+    margin: 0;
+    align-items: center;
+}
+.motivo mat-icon{
+    margin:0;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+}
+.telefono mat-icon{
+    margin:0;
+       font-size: 18px;
+       display: flex;
+       align-items: center;
+
+}
+.motivo p{
+    margin-bottom: 5px;
+}
+.descripcion mat-icon{
+    margin:0;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+}
+
+.descripcion p{
+    height:50px;
+    overflow: hidden;
+    padding-right: 10px;
+   
+    text-overflow: ellipsis;
+}
+.motivo label{
+    display: flex;
+    width: 50%;
+    align-items: center;
+}
+
+.telefono label{
+    display: flex;
+    width: 25%;
+    align-items: center;
+}
+
+.descripcion label{
+    display: flex;
+    width: 25%;
+    align-items: flex-start;
+}
+ 
+
+
+
+
+.botones{
+    display: flex;
+    width: 100%;
+    height: 35px;
+    margin: 0;
+}
+.botones button{
+    width: 50%;
+      height: 100%;    
+}
+.registerbtn{
+     background-color: #ac0d30;
+     font-weight: bold;
+    color: white;
+    border: 0;
+}
+.cancelbtn{
+    font-weight: bold;
+color: black;
+border: 0;
+background-color: rgb(219, 219, 219);
+}
+
+
+.icontool1{
+    margin-left: 55%;
+    color: white;
+}
+.icontool{
+    margin-left: 5%;
+    color: white;
+}
+
+
+
+
+
+
+
+
+
 .content{
   margin: 10px 0px 10px 0px;
     width: 100%;
@@ -87,52 +276,16 @@ h5{
     
     text-overflow: ellipsis;
 }
-.btns{
-    padding: 0px;
-    font-family: 'Dosis', sans-serif;
-    display: flex;
-    justify-content: space-around;
-    
-}
-.btn-class{
-    display: flex;
-    justify-content: center;
-    font-weight: bold;
-    align-items: center;
-    height: 35px; 
-    padding: 10px;
-   
-}
-.modal{
 
-    
-    top: 8vh;
-    left: 13vw;
-}
-.modal-dialog{
-   margin: 0;
-   padding: 0;
-}
-.modal-content{
-  
- border-radius: 0px;
-    width: 1000px;
-   
-}
-.modal-body{
-    height: 450px;
-    padding: 0;
-    display: flex;
-}
 
 .modal-header{
     
-    background-color: #992e45;
+    
     
  border-radius: 0px;
    
 
-    color: white;
+    color: #666;
 }
 mat-icon{
     color: #992e45;
@@ -142,26 +295,63 @@ mat-icon{
 }
 
 .imgregister{
-    height: 100%;
-    width: 35%;
- 
+    height: 250px;
+    width: 100%;
+    background-color: #f7d063;
+    text-align: center;
+    margin-bottom: 15px;
+    border-radius: 20px;
+}
+.imagenreg{
+   height: 100%;
+    width: 70%;
+    
 
 }
 .formregister{
     height: 100%;
     max-height: 450px;
+    padding: 15px;
     font-family: 'Comfortaa', cursive;
     overflow-y: auto;
     overflow-x: hidden;
-    width: 65%;
-}
-
-.imagenreg{
     width: 100%;
-    height: 400px;
-
 }
 
+.form1{
+    width: 100%;
+    height: auto;
+    margin-bottom: 30px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    padding-left: 10px;
+    box-shadow: 1px 8px 8px 0px rgba(0,0,0,0.2);
+}
+.form1 img{
+    
+    margin-left: 10px;
+    margin-bottom: 5px;
+    width: 20px;
+    height: 20px;
+}
+
+
+.footer{
+    margin-top: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+.footer .asdasd{
+       background-color: #e6e6e6;
+       display: flex;
+       justify-content: center;
+       align-items: center;
+       margin-left: 15px;
+ 
+}
 .forms{
     display: grid;
     column-gap: 10px;
@@ -194,6 +384,11 @@ mat-form-field{
 .titles{
     font-weight: bold;
 }
+.horario{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
 .stepper-label {
     color:black;
    
@@ -216,17 +411,29 @@ mat-form-field{
 .btns-form{
     width: 100%;
     display: flex;
-
-    margin-top: 15px;
-  
-    justify-content: flex-end;
-}
-.btns-form button{
-  background-color: #e6e6e6;
-    margin-right: 40px;
     
+    justify-content: center;
 }
-.btns-form button mat-icon{
+
+
+.btn-step{
+    background-color: #e6e6e6;
+    margin-right: 10px;
+    width: 100%;
+}
+
+.btn-step2{
+    background-color: #992e45;
+    color: white;
+    margin-right: 10px;
+    width: 100%;
+}
+.btn-step2 mat-icon{
+    font-size: 15px;
+    color: white;
+    height: 18px;
+}
+.btn-step mat-icon{
     font-size: 15px;
     height: 18px;
 }
