--- a/src/app/registros/registro-paciente/registro-paciente.component.html
+++ b/src/app/registros/registro-paciente/registro-paciente.component.html
@@ -1,4 +1,6 @@
-
+<head>
+ <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+ </head>
 <div class="padre">
 
 <div class="cuerpouno">
