--- a/src/app/asignacion/asignacion.component.css
+++ b/src/app/asignacion/asignacion.component.css
@@ -1,11 +1,91 @@
+*{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+body{
+  width: 100vw;
+  padding-top: 30px;
+  height: 100vh;
+  background-color: antiquewhite;
+}
 .ti{
 text-align: center;
 }
 .container{
-  margin-top: 50px;
+  border-radius: 20px;
+  padding-top: 20px;
+  width: 100%;
+  height: 84vh;
+    background-color: white
 }
-
+.barradebusqueda{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.filter{
+  width: 50%;
+}
 .modal-body{
   display: flex;
   justify-content: space-around;
+}
+
+.titleimg{
+  border-radius: 50%;
+  width: 80px;
+  height: 40px;
+}
+
+
+/*** table dinamic **/
+table {
+  width: 100%;
+}
+
+tr.example-detail-row {
+  height: 0;
+}
+
+tr.example-element-row:not(.example-expanded-row):hover {
+  background: whitesmoke;
+}
+
+tr.example-element-row:not(.example-expanded-row):active {
+  background: #efefef;
+}
+
+.example-element-row td {
+  border-bottom-width: 0;
+}
+
+.example-element-detail {
+  overflow: hidden;
+  display: flex;
+}
+
+.example-element-diagram {
+  min-width: 80px;
+  border: 2px solid black;
+  padding: 8px;
+  font-weight: lighter;
+  margin: 8px 0;
+  height: 104px;
+}
+
+.example-element-symbol {
+  font-weight: bold;
+  font-size: 40px;
+  line-height: normal;
+}
+
+.example-element-description {
+  padding: 16px;
+}
+
+.example-element-description-attribution {
+  opacity: 0.5;
+}
+
+.imgasignar{
+  
 }
