--- a/src/app/asignacion/asignacion.component.html
+++ b/src/app/asignacion/asignacion.component.html
@@ -1,43 +1,88 @@
-<div class="container">
-<h1>Panel de Estado de Atenciones</h1>
-
-<!--Select-->
-<mat-form-field appearance="fill" >
-  <mat-label>Estado</mat-label>
-  <mat-select  [(ngModel)]="opcion" >
-      <mat-option value="Sin Asignar" (click)="buscar()">Sin Asignar</mat-option>
-      <mat-option value="En proceso" (click)="buscar()">Asignado</mat-option>
-      <mat-option value="Finalizado" (click)="buscar()">Finalizado</mat-option>
-      <mat-option value="Ayuda" (click)="buscar()">Nesecita Ayuda Especial</mat-option>
-  </mat-select>
-</mat-form-field>
-
-<!--Tabla-->
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <th scope="col" class="ti">#</th>
-      <th scope="col" class="ti">Nombre y Apellidos</th>
-      <th scope="col" class="ti">Detalle</th>
-      <th scope="col" class="ti">Telefono / Celular</th>
-      <th scope="col" class="ti">Estado</th>
-      <th scope="col" class="ti" *ngIf="opcion!='En proceso'">Asignar Paciente</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let paciente of pacientes; let i= index">
-      <td  class="ti">{{i+1}}</td>
-      <td>{{paciente.nombre + '' + apellido}}</td>
-      <td class="ti">{{paciente.motivo}}</td>
-      <td class="ti">{{paciente.telefono}}</td>
-      <td class="ti">{{paciente.estado}}</td>
-      <td class="ti"><img src="https://img.icons8.com/color/30/000000/scale-tool.png" style="cursor: pointer;" *ngIf="paciente.estado!='En proceso'" data-toggle="modal" data-target="#exampleModalCenter"/></td>
-    </tr>
-  </tbody>
-</table>
-</div>
-
-
+<body>
+  
+  <div class="container">
+    <h2><img class="titleimg" src="https://www.nicepng.com/png/detail/242-2420369_atencion-al-cliente-png-imagenes-de-actividades-claves.png" >
+       Panel de Estado de Atenciones</h2>
+    
+    
+    <div class="barradebusqueda">
+      <mat-form-field class="filter" appearance="standard">
+        <mat-label>Buscar..</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Nombre de ...." #input />
+      </mat-form-field>
+    <!--Select-->
+    <mat-form-field appearance="fill" class="buscador" >
+      <mat-label>Estado</mat-label>
+      <mat-select  [(ngModel)]="opcion" >
+          <mat-option value="Sin Asignar" (click)="buscar()">Sin Asignar</mat-option>
+          <mat-option value="En proceso" (click)="buscar()">Asignado</mat-option>
+          <mat-option value="Finalizado" (click)="buscar()">Finalizado</mat-option>
+          <mat-option value="Ayuda" (click)="buscar()">Nesecita Ayuda Especial</mat-option>
+      </mat-select>
+    </mat-form-field>
+    
+    </div>
+       
+    
+    
+    
+    <div class="mat-elevation-z8">
+      <table mat-table *ngIf="dataSource" multiTemplateDataRows [dataSource]="dataSource" >
+     
+        <ng-container matColumnDef="nombre" >
+          <th mat-header-cell *matHeaderCellDef>Nombre Completo</th>
+          <td mat-cell *matCellDef="let element"> {{(element.nombre + ' ' + element.apellido) | titlecase}} </td>
+        </ng-container>
+        <ng-container matColumnDef="motivo" >
+          <th mat-header-cell *matHeaderCellDef>Motivo</th>
+          <td mat-cell *matCellDef="let element"> {{element.motivo | titlecase}} </td>
+        </ng-container>
+        <ng-container matColumnDef="telefono" >
+          <th mat-header-cell *matHeaderCellDef>Telefono/Celular</th>
+          <td mat-cell *matCellDef="let element"> {{element.telefono}} </td>
+        </ng-container>
+        <ng-container matColumnDef="estado" >
+          <th mat-header-cell *matHeaderCellDef>Estado</th>
+          <td mat-cell *matCellDef="let element"> {{element.estado}} </td>
+        </ng-container>
+        <ng-container matColumnDef="asignacion" >
+          <th mat-header-cell *matHeaderCellDef>Asignar Especialista</th>
+          <td mat-cell class="imgasignar" *matCellDef="let element"> <img src="https://img.icons8.com/color/30/000000/scale-tool.png" (click)="seleccionarpac(element)" style="cursor: pointer;" *ngIf="element.estado!='En proceso'" data-toggle="modal" data-target="#exampleModalCenter"/> </td>
+        </ng-container>
+      
+        <ng-container matColumnDef="expandedDetail">
+          <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
+            <div class="example-element-detail"
+                 [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'" >
+              <div class="example-element-description">
+                <label>Descripcion:</label>
+                {{element.descripcion}}
+               
+              </div>
+            </div>
+          </td>
+        </ng-container>
+      
+        <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+        <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+      
+        <tr mat-row *matRowDef="let element; columns: columnsToDisplay;"
+            class="example-element-row"
+            [class.example-expanded-row]="expandedElement === element"
+           
+            (click)="expandedElement = expandedElement === element ? null : element">
+        </tr>
+        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+      </table>
+      <mat-paginator [pageSize]="5" [pageSizeOptions]="[3, 5]"showFirstLastButtons
+        aria-label="Select page of periodic elements">
+      </mat-paginator>
+    </div>
+    
+    </div>
+    
+    
+</body>
 <!-- Modal -->
 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
@@ -50,15 +95,15 @@
       </div>
       <div class="modal-body">
         <div>
-        <a href="" [routerLink]="['/nav/psicologo']" (click)="cerrarModal()" ><img src="https://img.icons8.com/color/48/000000/psychology.png"/></a>
+        <a href="" [routerLink]="['/nav/psicologo',pacseleccionado]" (click)="cerrarModal()" ><img src="https://img.icons8.com/color/48/000000/psychology.png"/></a>
         <p>Psicologo</p>
       </div>
       <div>
-        <a href="" [routerLink]="['/nav/pastor']" (click)="cerrarModal()"><img src="https://img.icons8.com/color/48/000000/the-pope.png"/></a>
+        <a href="" [routerLink]="['/nav/pastor',pacseleccionado]" (click)="cerrarModal()"><img src="https://img.icons8.com/color/48/000000/the-pope.png"/></a>
         <p>Pastor</p>
       </div>
       <div>
-        <a href="" [routerLink]="['/nav/estudiante']" (click)="cerrarModal()"><img src="https://img.icons8.com/color/48/000000/student-male--v1.png"/></a>
+        <a href="" [routerLink]="['/nav/estudiante',pacseleccionado]" (click)="cerrarModal()"><img src="https://img.icons8.com/color/48/000000/student-male--v1.png"/></a>
         <p>Estudiante</p>
       </div>
       </div>
