--- a/src/app/asignacion/pastor/pastor.component.html
+++ b/src/app/asignacion/pastor/pastor.component.html
@@ -1,26 +1,84 @@
-<!--Tabla-->
-<div class="container" style="margin-top:50px">
-  <h1 style="text-align: center;">Pastores Disponibles</h1><br>
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <th scope="col" class="ti">#</th>
-      <th scope="col" class="ti">Nombre y Apellidos</th>
-      <th scope="col" class="ti">Especialidad</th>
-      <th scope="col" class="ti">Universidad </th>
-      <th scope="col" class="ti">Grado Acadenico</th>
-      <th scope="col" class="ti">Seleccionar</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let pastor of pastores; let i= index">
-      <td  class="ti">{{i+1}}</td>
-      <td class="ti">{{pastores.nombre + '' + apellido}}</td>
-      <td class="ti">{{pastores.especialidad}}</td>
-      <td class="ti">{{pastores.universidad}}</td>
-      <td class="ti">{{pastores.grado_academico}}</td>
-      <td class="ti"><img src="https://img.icons8.com/color/30/000000/ok--v1.png" cursor="pointer"  /></td>
-    </tr>
-  </tbody>
-</table>
+
+
+<div class="body">
+
+  <h2 ><img src="https://img.icons8.com/color/48/000000/the-pope.png"/>Pastores
+    Disponibles</h2><br>
+    <div class="pacientedata">
+       <h5> Paciente:</h5>
+       <input type="text" class="show" [(ngModel)]="pacienteseleccionado.nombre + ' ' + pacienteseleccionado.apellido "  disabled>
+       <h5> Motivo:</h5>
+       <input type="text" class="show" [(ngModel)]="pacienteseleccionado.motivo"  disabled>
+    </div>
+  <div class="mat-elevation-z8 tablegen">
+    <mat-form-field class="filter" appearance="standard">
+      <mat-label>Buscar..</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="nombre de
+        usuario" #input />
+    </mat-form-field>
+
+    <table mat-table [dataSource]="dataSource" *ngIf="pastores"
+      class="mat-elevation-z8 demo-table">
+      <!-- Position Column -->
+      <ng-container matColumnDef="nro">
+        <th mat-header-cell *matHeaderCellDef>No.</th>
+        <td mat-cell [ngClass]="{'highligth': row.nombre == pastorselec.nombre}" *matCellDef="let row,let element;let i=index">{{i+1}}</td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="nombre">
+        <th mat-header-cell *matHeaderCellDef>Nombre y Apellidos</th>
+        <td mat-cell [ngClass]="{'highligth': row.nombre == pastorselec.nombre}" *matCellDef="let row,let element">{{element.nombre + ' ' + element.apellido}}</td>
+      </ng-container>
+
+      <!-- Weight Column -->
+      <ng-container matColumnDef="especialidad">
+        <th mat-header-cell *matHeaderCellDef>Especialidad</th>
+        <td mat-cell[ngClass]="{'highligth': row.nombre == pastorselec.nombre}" *matCellDef="let row,let element">{{element.especialidad}}</td>
+      </ng-container>
+
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="universidad">
+        <th mat-header-cell *matHeaderCellDef>Universidad</th>
+        <td mat-cell[ngClass]="{'highligth': row.nombre == pastorselec.nombre}" *matCellDef="let row,let element">{{element.universidad}}</td>
+      </ng-container>
+
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="grado_academico">
+        <th mat-header-cell *matHeaderCellDef>Grado Academico</th>
+        <td mat-cell  [ngClass]="{'highligth': row.nombre == pastorselec.nombre}" *matCellDef="let row,let element">{{element.grado_academico}}</td>
+      </ng-container>
+
+    
+
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+        [ngClass]="{'highligth':row.nombre == pastorselec.nombre}"
+        (click)="select(row)"></tr>
+
+    </table>
+    <mat-paginator [pageSize]="5" [pageSizeOptions]="[3, 5]"showFirstLastButtons
+      aria-label="Select page of periodic elements">
+    </mat-paginator>
+
+  </div>
+
+  <div class="infoaboutper">
+  
+    <h5>Pastor:</h5>
+    <input type="text" class="show"  [(ngModel)]="pastorselec.nombre"  disabled>
+    <button class="cancelar" (click)="cancelar()">
+          Cancelar
+    </button>
+    <button class="asignar" >
+          Asignar
+    </button>
+  </div>
+
 </div>
+
+
+
+
+
