--- a/src/app/asignacion/psicologo/psicologo.component.html
+++ b/src/app/asignacion/psicologo/psicologo.component.html
@@ -1,28 +1,88 @@
-<!--Tabla-->
-<div class="container" style="margin-top:50px">
-  <h1 style="text-align: center;">Psicologos Disponibles</h1><br>
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <th scope="col" class="ti">#</th>
-      <th scope="col" class="ti">Nombre y Apellidos</th>
-      <th scope="col" class="ti">Especialidad</th>
-      <th scope="col" class="ti">Colegiatura</th>
-      <th scope="col" class="ti">Grado Acadenico</th>
-      <th scope="col" class="ti">N° Colegiatura</th>
-      <th scope="col" class="ti">Seleccionar</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let psicologo of psicologos; let i= index">
-      <td  class="ti">{{i+1}}</td>
-      <td class="ti">{{psicologo.nombre + '' + apellido}}</td>
-      <td class="ti">{{psicologo.especialidad}}</td>
-      <td class="ti">{{psicologo.colegiatura}}</td>
-      <td class="ti">{{psicologo.grado_academico}}</td>
-      <td class="ti">{{psicologo.n_colegiatura}}</td>
-      <td class="ti"><img src="https://img.icons8.com/color/30/000000/ok--v1.png" cursor="pointer"  /></td>
-    </tr>
-  </tbody>
-</table>
+
+
+
+<div class="body">
+
+  <h2 ><img src="https://img.icons8.com/color/48/000000/psychology.png"/>Especialistas
+    Disponibles</h2><br>
+    <div class="pacientedata">
+       <h5> Paciente:</h5>
+       <input type="text" class="show" [(ngModel)]="pacienteseleccionado.nombre + ' ' + pacienteseleccionado.apellido "  disabled>
+       <h5> Motivo:</h5>
+       <input type="text" class="show" [(ngModel)]="pacienteseleccionado.motivo"  disabled>
+    </div>
+  <div class="mat-elevation-z8 tablegen">
+    <mat-form-field class="filter" appearance="standard">
+      <mat-label>Buscar..</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="nombre de
+        usuario" #input />
+    </mat-form-field>
+
+    <table mat-table [dataSource]="dataSource" *ngIf="psicologos"
+      class="mat-elevation-z8 demo-table">
+      <!-- Position Column -->
+      <ng-container matColumnDef="nro">
+        <th mat-header-cell *matHeaderCellDef>No.</th>
+        <td mat-cell *matCellDef="let element;let i=index">{{i+1}}</td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="nombre">
+        <th mat-header-cell *matHeaderCellDef>Nombre y Apellidos</th>
+        <td mat-cell *matCellDef="let element">{{(element.nombre + ' ' + element.apellido) |  titlecase}}</td>
+      </ng-container>
+
+      <!-- Weight Column -->
+      <ng-container matColumnDef="especialidad">
+        <th mat-header-cell *matHeaderCellDef>Especialidad</th>
+        <td mat-cell *matCellDef="let element">{{element.especialidad}}</td>
+      </ng-container>
+
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="colegiatura">
+        <th mat-header-cell *matHeaderCellDef>Colegiatura</th>
+        <td mat-cell *matCellDef="let element">{{element.colegiatura}}</td>
+      </ng-container>
+
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="n_colegiatura">
+        <th mat-header-cell *matHeaderCellDef>Nro Colegiatura</th>
+        <td mat-cell *matCellDef="let element">{{element.n_colegiatura}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="grado_academico">
+        <th mat-header-cell *matHeaderCellDef>Grado Academico</th>
+        <td mat-cell *matCellDef="let element">{{element.grado_academico}}</td>
+      </ng-container>
+
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+        [ngClass]="{'highligth':row.nombre == especialistaselec.nombre}"
+        (click)="select(row)"></tr>
+
+    </table>
+    <mat-paginator [pageSize]="5" [pageSizeOptions]="[3, 5]"showFirstLastButtons
+      aria-label="Select page of periodic elements">
+    </mat-paginator>
+
+  </div>
+
+  <div class="infoaboutper">
+  
+    <h5>Especialista:</h5>
+    <input type="text" class="show"  [(ngModel)]="especialistaselec.nombre"  disabled>
+    <button class="cancelar" (click)="cancelar()">
+          Cancelar
+    </button>
+    <button class="asignar" >
+          Asignar
+    </button>
+  </div>
+
 </div>
+
+
+
+
+
